Part_II_explanatory.ipynb

--- a/Part_II_explanatory.ipynb
+++ b/Part_II_explanatory.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part II - (Presentation Title)\n",
+    "# Part II - (Ford Gobike)\n",
     "## by Adham Kassem"
    ]
   },
